--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -93,7 +93,13 @@
     </div>
   </div>
 
-
+<div class="container">
+    <div class="row justify-content-md-center">
+       <div class="col-md-8">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis error accusamus ipsum nemo fugit cumque consectetur eius facilis asperiores possimus magnam adipisci blanditiis dolorum quam accusantium assumenda eveniet, repellat eligendi!
+       </div>
+    </div>
+</div>
 
 
 
