Added two button links for images and video.

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -7,30 +7,23 @@
     <title>Home</title>
 </head>
 <body>
-
-
   <!-- background cover image and text -->
   <div class="container-fluid bg-cover">
-    <!-- <div class="heading flex">
-      <p class="heading-text">
-        2/23/2018
-      </p>
-    </div> -->
-
     <div class="bg-footer flex">
       <div class="row">
-        <div class="col-md-6 bg-footer-txt">
-          <a href="/about">
+        <!-- photo button -->
+        <div class="col-md-6 flex justify-content-end mobile">
+          <a href="/images?id=all">
             <button class="heading-text">Photos</button>
           </a>
         </div>
-        <div class="col-md-6">
-          <p class="heading-text">Videos</p>
+        <!-- video button -->
+        <div class="col-md-6 flex justify-content-start mobile">
+          <a href="/videos">
+            <button class="heading-text">Videos</button>
+          </a>
         </div>
       </div>
     </div>
-  </div>
-
-
 </body>
 </html>
