--- a/views/images.handlebars
+++ b/views/images.handlebars
@@ -1,7 +1,7 @@
 <h1 class="text-center">Images</h1>
 <div class="container">
   <div class="dropdown">
-    <button class="btn btn-danger dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       Sort By:
     </button>
     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -10,6 +10,7 @@
       <a class="dropdown-item" href="?id=venue">Venue</a>
       <a class="dropdown-item" href="?id=photo-shoot">Couple Photoshoot</a>
       <a class="dropdown-item" href="?id=reception">Reception</a>
+      <a class="dropdown-item" href="?id=all">All Photos</a>
     </div>
   </div>
 
@@ -18,7 +19,7 @@
 <div class="row">
   <div class="column">
     {{#each col1}}
-      <a href="webimages/md_{{this.imageName}}" class="tn-img-gallery" data-fancybox="images" data-srcset="webimages/lg_{{this.imageName}} 800w, webimages/md_{{this.imageName}} 570w, webimages/tn_{{this.imageName}} 280w " data-caption={{this.category}}>
+      <a href="webimages/md_{{this.imageName}}" class="tn-img-gallery" data-fancybox="images" data-srcset="webimages/lg_{{this.imageName}} 800w, webimages/md_{{this.imageName}} 570w, webimages/tn_{{this.imageName}} 280w " data-caption="{{this.imageDescription}}">
         <img src="webimages/tn_{{this.imageName}}" class="photo">
         <div class="description">
           <p>{{this.imageDescription}}</p>
@@ -30,7 +31,7 @@
 
   <div class="column">
     {{#each col2}}
-      <a href="webimages/md_{{this.imageName}}" class="tn-img-gallery" data-fancybox="images" data-srcset="webimages/lg_{{this.imageName}} 800w, webimages/md_{{this.imageName}} 570w, webimages/tn_{{this.imageName}} 280w " data-caption={{this.category}}>
+      <a href="webimages/md_{{this.imageName}}" class="tn-img-gallery" data-fancybox="images" data-srcset="webimages/lg_{{this.imageName}} 800w, webimages/md_{{this.imageName}} 570w, webimages/tn_{{this.imageName}} 280w " data-caption="{{this.imageDescription}}">
         <img src="webimages/tn_{{this.imageName}}" class="photo">
         <div class="description">
           <p>{{this.imageDescription}}</p>
@@ -41,7 +42,7 @@
 
   <div class="column">
     {{#each col3}}
-      <a href="webimages/md_{{this.imageName}}" class="tn-img-gallery" data-fancybox="images" data-srcset="webimages/lg_{{this.imageName}} 800w, webimages/md_{{this.imageName}} 570w, webimages/tn_{{this.imageName}} 280w " data-caption={{this.category}}>
+      <a href="webimages/md_{{this.imageName}}" class="tn-img-gallery" data-fancybox="images" data-srcset="webimages/lg_{{this.imageName}} 800w, webimages/md_{{this.imageName}} 570w, webimages/tn_{{this.imageName}} 280w " data-caption="{{this.imageDescription}}">
         <img src="webimages/tn_{{this.imageName}}" class="photo">
         <div class="description">
           <p>{{this.imageDescription}}</p>
@@ -52,7 +53,7 @@
 
   <div class="column">
     {{#each col4}}
-      <a href="webimages/md_{{this.imageName}}" class="tn-img-gallery" data-fancybox="images" data-srcset="webimages/lg_{{this.imageName}} 800w, webimages/md_{{this.imageName}} 570w, webimages/tn_{{this.imageName}} 280w " data-caption={{this.category}}>
+      <a href="webimages/md_{{this.imageName}}" class="tn-img-gallery" data-fancybox="images" data-srcset="webimages/lg_{{this.imageName}} 800w, webimages/md_{{this.imageName}} 570w, webimages/tn_{{this.imageName}} 280w " data-caption="{{this.imageDescription}}">
         <img src="webimages/tn_{{this.imageName}}" class="photo">
         <div class="description">
           <p>{{this.imageDescription}}</p>
