--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,10 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.css">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Main</title>
+    <title>{{page}}</title>
 </head>
 <body>
 
