--- a/views/public/css/styles.css
+++ b/views/public/css/styles.css
@@ -369,19 +369,23 @@ img {
 
 .description {
   background-color: #fff;
-  padding: 0px 10px 2px 10px; */
-  text-align: center;
+  padding: 0px 10px 5px 10px; */
+}
 
+.description p {
+  text-align: center;
+  margin-bottom: 0px;
 }
 
 .btn {
   background-color: #333;
   border: 1px solid #333;
+  color: #fff;
 }
 
 .btn:hover {
-  background-color: #444;
-  border: 1px solid #333;
+  background-color: #e8e8e8;
+  border: 1px solid #e8e8e8;
 
   padding: 6px 12px;
 }
