Updated text and class files for sticky button

--- a/views/images.handlebars
+++ b/views/images.handlebars
@@ -1,8 +1,8 @@
-<h1 class="text-center">Images</h1>
-<div class="container">
-  <div class="dropdown">
-    <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      Sort By:
+<h1 class="text-center">Wedding Photos {{width}}</h1>
+<div class="container" id="wrapper">
+  <div class="dropdown" id="stickyTop">
+    <button class="btn" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      Search By Category <i class="fa fa-angle-down fa-sm fa-button"></i>
     </button>
     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
       <a class="dropdown-item" href="?id=bridesmaids">Bride & Bridesmaids</a>
@@ -16,16 +16,15 @@
 
 </div>
 
-<div class="row">
+<div class="row" id="row-mobile">
   <div class="column">
     {{#each col1}}
       <a href="webimages/md_{{this.imageName}}" class="tn-img-gallery" data-fancybox="images" data-srcset="webimages/lg_{{this.imageName}} 800w, webimages/md_{{this.imageName}} 570w, webimages/tn_{{this.imageName}} 280w " data-caption="{{this.imageDescription}}">
         <img src="webimages/tn_{{this.imageName}}" class="photo">
+      </a>
         <div class="description">
           <p>{{this.imageDescription}}</p>
         </div>
-      </a>
-
     {{/each}}
   </div>
 
@@ -33,10 +32,10 @@
     {{#each col2}}
       <a href="webimages/md_{{this.imageName}}" class="tn-img-gallery" data-fancybox="images" data-srcset="webimages/lg_{{this.imageName}} 800w, webimages/md_{{this.imageName}} 570w, webimages/tn_{{this.imageName}} 280w " data-caption="{{this.imageDescription}}">
         <img src="webimages/tn_{{this.imageName}}" class="photo">
+      </a>
         <div class="description">
           <p>{{this.imageDescription}}</p>
         </div>
-      </a>
     {{/each}}
   </div>
 
@@ -44,10 +43,10 @@
     {{#each col3}}
       <a href="webimages/md_{{this.imageName}}" class="tn-img-gallery" data-fancybox="images" data-srcset="webimages/lg_{{this.imageName}} 800w, webimages/md_{{this.imageName}} 570w, webimages/tn_{{this.imageName}} 280w " data-caption="{{this.imageDescription}}">
         <img src="webimages/tn_{{this.imageName}}" class="photo">
+      </a>
         <div class="description">
           <p>{{this.imageDescription}}</p>
         </div>
-      </a>
     {{/each}}
   </div>
 
@@ -55,9 +54,9 @@
     {{#each col4}}
       <a href="webimages/md_{{this.imageName}}" class="tn-img-gallery" data-fancybox="images" data-srcset="webimages/lg_{{this.imageName}} 800w, webimages/md_{{this.imageName}} 570w, webimages/tn_{{this.imageName}} 280w " data-caption="{{this.imageDescription}}">
         <img src="webimages/tn_{{this.imageName}}" class="photo">
+      </a>
         <div class="description">
           <p>{{this.imageDescription}}</p>
         </div>
-      </a>
     {{/each}}
   </div>
