Renamed route url.

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -5,7 +5,7 @@
       <div class="row">
         <!-- photo button -->
         <div class="col-md-6 flex justify-content-end mobile">
-          <a href="/images?id=all">
+          <a href="/images">
             <button class="heading-text">Photos</button>
           </a>
         </div>
