--- a/views/videos.handlebars
+++ b/views/videos.handlebars
@@ -1,7 +1,12 @@
 <h1 class="text-center title">Videos</h1>
+<div class="container" id="wrapper">
+  <div class="dropdown" id="stickyTop">
+    {{> menuPartial }}
+  </div>
+</div>
+<br>
 
 <div class="container">
-
   <div class="row">
     <div class="col-sm">
           <a data-fancybox href="https://youtu.be/-tVeTEF7cJI&amp;autoplay=1&amp;rel=0&amp;controls=1&amp;showinfo=0">
