--- a/views/images.handlebars
+++ b/views/images.handlebars
@@ -1,62 +1,8 @@
 <h1 class="text-center">Wedding Photos {{width}}</h1>
 <div class="container" id="wrapper">
   <div class="dropdown" id="stickyTop">
-    <button class="btn" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      Search By Category <i class="fa fa-angle-down fa-sm fa-button"></i>
-    </button>
-    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-      <a class="dropdown-item" href="?id=bridesmaids">Bride & Bridesmaids</a>
-      <a class="dropdown-item" href="?id=groom-groomsmen">Groom & Groomsmen</a>
-      <a class="dropdown-item" href="?id=venue">Venue</a>
-      <a class="dropdown-item" href="?id=photo-shoot">Couple Photoshoot</a>
-      <a class="dropdown-item" href="?id=reception">Reception</a>
-      <a class="dropdown-item" href="?id=all">All Photos</a>
-    </div>
+    {{> menuPartial }}
   </div>
-
 </div>
 
-<div class="row" id="row-mobile">
-  <div class="column">
-    {{#each col1}}
-      <a href="webimages/md_{{this.imageName}}" class="tn-img-gallery" data-fancybox="images" data-srcset="webimages/lg_{{this.imageName}} 800w, webimages/md_{{this.imageName}} 570w, webimages/tn_{{this.imageName}} 280w " data-caption="{{this.imageDescription}}">
-        <img src="webimages/tn_{{this.imageName}}" class="photo">
-      </a>
-        <div class="description">
-          <p>{{this.imageDescription}}</p>
-        </div>
-    {{/each}}
-  </div>
-
-  <div class="column">
-    {{#each col2}}
-      <a href="webimages/md_{{this.imageName}}" class="tn-img-gallery" data-fancybox="images" data-srcset="webimages/lg_{{this.imageName}} 800w, webimages/md_{{this.imageName}} 570w, webimages/tn_{{this.imageName}} 280w " data-caption="{{this.imageDescription}}">
-        <img src="webimages/tn_{{this.imageName}}" class="photo">
-      </a>
-        <div class="description">
-          <p>{{this.imageDescription}}</p>
-        </div>
-    {{/each}}
-  </div>
-
-  <div class="column">
-    {{#each col3}}
-      <a href="webimages/md_{{this.imageName}}" class="tn-img-gallery" data-fancybox="images" data-srcset="webimages/lg_{{this.imageName}} 800w, webimages/md_{{this.imageName}} 570w, webimages/tn_{{this.imageName}} 280w " data-caption="{{this.imageDescription}}">
-        <img src="webimages/tn_{{this.imageName}}" class="photo">
-      </a>
-        <div class="description">
-          <p>{{this.imageDescription}}</p>
-        </div>
-    {{/each}}
-  </div>
-
-  <div class="column">
-    {{#each col4}}
-      <a href="webimages/md_{{this.imageName}}" class="tn-img-gallery" data-fancybox="images" data-srcset="webimages/lg_{{this.imageName}} 800w, webimages/md_{{this.imageName}} 570w, webimages/tn_{{this.imageName}} 280w " data-caption="{{this.imageDescription}}">
-        <img src="webimages/tn_{{this.imageName}}" class="photo">
-      </a>
-        <div class="description">
-          <p>{{this.imageDescription}}</p>
-        </div>
-    {{/each}}
-  </div>
+{{> contentPartial }}
