Passed title as parameter to title the page.

--- a/views/bride.handlebars
+++ b/views/bride.handlebars
@@ -1,4 +1,4 @@
-<h1 class="text-center">Wedding Photos {{width}}</h1>
+<h1 class="text-center">{{page}}</h1>
 <div class="container" id="wrapper">
   <div class="dropdown" id="stickyTop">
     {{> menuPartial }}
