--- a/views/videos.handlebars
+++ b/views/videos.handlebars
@@ -1,4 +1,4 @@
-<h1 class="text-center title">Videos</h1>
+<h1 class="text-center title">{{page}}</h1>
 <div class="container" id="wrapper">
   <div class="dropdown" id="stickyTop">
     {{> menuPartial }}
