--- a/views/public/css/styles.css
+++ b/views/public/css/styles.css
@@ -1,4 +1,3 @@
-
 * {
     box-sizing: border-box;
 }
@@ -27,11 +26,9 @@ background: transparent; }
   background-repeat: no-repeat;
   background-size: cover;
   min-height: 100%;
-  /* border-bottom: 3px solid #fff;; */
 }
 
 .heading {
-  /* width: 100%; */
   align-items: flex-start;
   justify-content: center;
   opacity: .8;
@@ -44,7 +41,7 @@ background: transparent; }
   font-size: 3rem;
   margin-right: 5px;
   margin-left: 5px;
-  padding-left: 25px;
+  padding-left: 25px;  /* width: 100%; */
   padding-right: 25px;
   text-align: center;
   border: 3px solid black;
@@ -412,6 +409,10 @@ img {
 
 }
 
+.dropdown-item {
+  text-align: center;
+}
+
 .sticky-gap {
   padding-top: 49px;
 }
@@ -438,6 +439,11 @@ img {
     button {
       width: 100%;
       margin-bottom: 15px;
+    }
+
+    .dropdown-menu {
+      margin: auto !important;
+      width: 100%;
     }
 
     .mobile {
